--- a/styles.css
+++ b/styles.css
@@ -99,11 +99,15 @@ body>#toolbar {
     background-color: var(--color-toolbar);
 }
 
-@media (display-mode: standalone) {
+@media (display-mode: standalone){
     body>#toolbar {
         padding: env(safe-area-inset-top) 
           env(safe-area-inset-right) 
           env(safe-area-inset-bottom, 5px) 
           env(safe-area-inset-left) !important;
+    }
+
+    #btnInstall {
+        display: none;
     }
 }
